# unix_rc

./: .antigenrc  .antigenrc.msys2  .bashrc  .cdcmds.sh  .colormakerc  .colorrc  .fzf.bash  .fzf.zsh  .gdbinit  .gitconfig  .gitignore  .inputrc  .less_termcap  .ohmyzshrc  .p10k.c2  .p10k.c2.bak01  .p10k.c3  .p10k.r2  .p10k.r2.bak01  .p10k.r3  .p10k.r4  .p10k.zsh  .screenrc  .tigrc  .tmux.conf  .vimrc  .zgenrc  .zplugrc  .zsh_plugins.txt  .zshrc  .zshrc.msys2  apt_proxy.conf  auth.txt  check_diff.sh  clion.run  copy_antigen.sh  fsyh.ini  leon.zsh-theme  lynx.cfg  reset_antigen.sh  (+3 more)
.snmp/: .gitignore  mib2c.leon.conf  run_mib2c.sh  snmp.conf  snmpd.conf
.vim/plugin/: README.txt  fzf_ext.vim
myproxy/: autossh.host  mysocks.sh
myproxy/jHTTPp2/: run.sh  server.properties
myproxy/jHTTPp2/src/: Jhttpp2Admin.java  Jhttpp2ClientInputStream.java  Jhttpp2HTTPSession.java  Jhttpp2InputStream.java  Jhttpp2Launcher.java  Jhttpp2Read.java  Jhttpp2Server.java  Jhttpp2ServerInputStream.java  Jhttpp2URLMatch.java  Jhttpp2Utils.java  OnURLAction.java  WildcardDictionary.java
myproxy/mytunnel/: stunnel
myproxy/socks/: run.sh  socks.conf  socks.passwd
mytunnel/: run.sh  stunnel.conf
workspace/: diff.ies.mib_loopguard
workspace/glc.leon/: .gitignore  CMakeLists.txt  find_symbol.sh  getinc.sh  glc.rc  kk.c  make_export.sh  make_export.txt  rz  semTest  svn_diff.txt  svn_status.txt  sz  updateCache.sh
workspace/ies.leon/: .gitignore  CMakeLists.txt  getinc.sh  ies.rc  rz  semTest  semTest.c  svn_diff.bat  svn_diff.txt  svn_ignore.txt  svn_show.sh  svn_status.txt  sz  updateCache.sh
workspace/makefile_template/: Makefile  Makefile_old  utils.mk
workspace/sstest/: Makefile  main  main.c  s1.c  snew.c
workspace/test/: bitfield.c  mq.c  mq.send  mq_sysv  mq_sysv.c  sem_test1.c  shm.c  sig.c  sig1.c  unc  uns
workspace/test.sqlite/: basics.c
workspace/test_Makefile1/: Makefile
workspace/test_Makefile2/: b.c  f.h
workspace/test_so/: Makefile  a.c  b.c  ddd.c  f.c  m.c
workspace/test_so_common/: Makefile  a.c  b.c  common.c  main  main.c
workspace/test_so_link/: Makefile  a.c  b.c  main  main.c
workspace/testcode/: chs.c  mq.recv  n1.c  tt.c  un_client.c  un_server.c
workspace/tt/: Makefile  Makefile1  bb.h  f.c
